# DrugClaw

./: .gitignore  README.md  README_CN.md  __init__.py  api_keys.example.json  base.py  entity_audit.py  navigator_api_keys.example.json  navigator_api_keys.json  pyproject.toml  requirements.txt  run_minimal.py
.githooks/: pre-commit  pre-push
FDA_Orange_Book/: exclusivity.txt
docs/: 2026-03-18-检索链路与输出优化规划.md  2026-03-21-DrugClaw-Agent面试准备.md  2026-03-22-DrugClaw-一期输入标准化实施计划.md  2026-03-22-DrugClaw-二期结构化标识符输入实施计划.md  2026-03-22-DrugClaw-二期结构化标识符输入设计.md  2026-03-22-DrugClaw-优化路线与一期输入标准化设计.md  2026-03-23-DrugClaw-三期服务化一期实施计划.md  2026-03-23-DrugClaw-三期服务化一期设计.md  2026-03-23-DrugClaw-公网部署与服务稳定性实施计划.md  2026-03-23-DrugClaw-公网部署说明.md  2026-03-25-DrugClaw-4090直连公网部署方案.md  index.html  repository-guide.md
drugclaw/: agent_coder.py  agent_graph_builder.py  agent_planner.py  agent_reflector.py  agent_reranker.py  agent_responder.py  agent_retriever.py  agent_websearch.py  answer_validation.py  claim_assessment.py  cli.py  config.py  drug_alias_sources.py  drug_identifier_sources.py  drug_name_normalizer.py  evidence.py  llm_client.py  main_system.py  models.py  query_logger.py  query_plan.py  resource_path_resolver.py  resource_registry.py  response_formatter.py  server_app.py  server_models.py  service_runtime.py  structured_input_resolver.py  task_evidence_policy.py  web_evidence.py  web_query_policy.py
examples/: README.md  example_usage.py
maintainers/: README.md
new_bench/: bench_utils.py  run_all.py
self_bench/: __init__.py  bench_utils.py  run_all.py  runner.py  (+1 more)
(+768 files in other folders)
