[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "drugclaw"
version = "0.1.0"
description = "Agentic system with Synaptic Navigation for Evidence-based Drug Reasoning"
authors = [{name = "Qing Wang"}]
dependencies = ["langgraph", "openai", "requests"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
drugclaw = "drugclaw.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
